--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="w-[70%] h-full mx-auto mt-5 grid grid-cols-5 border border-black">
+<div class="w-[70%] h-full mx-auto mt-5 grid grid-cols-5 border border-black responsive">
   <div class="col-span-2 border-r border-black">
     <app-create-task></app-create-task>
   </div>
