--- a/src/styles.scss
+++ b/src/styles.scss
@@ -797,3 +797,14 @@ textarea {
 textarea {
   height: 150px !important;
 }
+
+@media only screen and (max-width: 950px) {
+  /* Điều chỉnh kiểu dáng khi màn hình có độ rộng nhỏ hơn hoặc bằng 900px */
+  .grid-cols-3 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    gap: 12px;
+  }
+  .col-span-2{
+    grid-column: span 1 / span 1;
+  }
+}
